@@ -1,10 +1,13 @@
 package ar.edu.unq.epersgeist.controller.helper;
 
+import ar.edu.unq.epersgeist.controller.dto.CreateEspirituDTO;
 import ar.edu.unq.epersgeist.controller.dto.EspirituDTO;
+import ar.edu.unq.epersgeist.controller.dto.UbicacionDTO;
 import ar.edu.unq.epersgeist.modelo.Direccion;
 import ar.edu.unq.epersgeist.modelo.Espiritu;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import jakarta.servlet.ServletException;
+import jakarta.validation.constraints.NotNull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -34,83 +37,71 @@ public class MockMVCEspirituController {
         }
     }
 
-//    private Long guardarEspiritu(Espiritu espiritu, HttpStatus expectedStatus) throws Throwable{
-//        var dto = EspirituDTO.desdeModelo(espiritu);
-//        var json = objectMapper.writeValueAsString(dto);
-//
-//        return Long.parseLong(
-//                performRequest(MockMvcRequestBuilders.post("/espiritu")
-//                        .contentType(MediaType.APPLICATION_JSON)
-//                        .content(json))
-//                        .andExpect(MockMvcResultMatchers.status().is(expectedStatus.value()))
-//                        .andReturn().getResponse().getContentAsString()
-//        );
-//    }
 
-    private Long guardarEspiritu(Espiritu espiritu, HttpStatus expectedStatus) throws Throwable {
-        var dto = EspirituDTO.desdeModelo(espiritu);
+    public <T> T guardarEspiritu(CreateEspirituDTO dto, HttpStatus expectedStatus,  Class<T> cls) throws Throwable {
         var json = objectMapper.writeValueAsString(dto);
 
-        var response = performRequest(MockMvcRequestBuilders.post("/espiritu")
+        var response = performRequest(MockMvcRequestBuilders.post("/espiritu" )
                 .contentType(MediaType.APPLICATION_JSON)
                 .content(json))
                 .andExpect(MockMvcResultMatchers.status().is(expectedStatus.value()))
                 .andReturn().getResponse();
 
-        String location = response.getHeader("Location");
-        if (location == null || !location.contains("/")) {
-            throw new IllegalStateException("No se pudo obtener el ID desde la cabecera Location");
-        }
-        return Long.parseLong(location.substring(location.lastIndexOf("/") + 1));
+        String responseBody = response.getContentAsString();
+        return objectMapper.readValue(responseBody, cls);
+
     }
 
 
-    public Long guardarEspiritu(Espiritu espiritu) throws Throwable {
-        return guardarEspiritu(espiritu, HttpStatus.CREATED);
+    public <T> T guardarEspiritu(CreateEspirituDTO dto,  Class<T> cls) throws Throwable {
+        return guardarEspiritu(dto, HttpStatus.CREATED, cls);
     }
 
 
     public Collection<Espiritu> recuperarTodos() throws Throwable{
-        var json = performRequest(MockMvcRequestBuilders.get("/espiritu/all"))
-                   .andExpect(MockMvcResultMatchers.status().isOk())
-                   .andReturn().getResponse().getContentAsString();
+        var json = getContentAsString("/espiritu");
 
         Collection<EspirituDTO> dtos = objectMapper.readValue(json,
-                    objectMapper.getTypeFactory().constructCollectionType(List.class,EspirituDTO.class)
-                );
-    return dtos.stream().map(EspirituDTO::aModelo).collect(Collectors.toList());
+                objectMapper.getTypeFactory().constructCollectionType(List.class, EspirituDTO.class)
+        );
+        return dtos.stream().map(EspirituDTO::aModelo).toList();
     }
 
-    public Espiritu recuperarEspiritu(Long espirituId) throws Throwable{
+    public Espiritu getEspirituById(Long espirituId) throws Throwable{
+        var json = getContentAsString("/espiritu/" + espirituId);
 
-        var json = performRequest(MockMvcRequestBuilders.get("/espiritu/" + espirituId))
+        var dto = objectMapper.readValue(json, EspirituDTO.class);
+        return dto.aModelo();
+    }
+
+
+    public int espiritusDemoniacos(Direccion direccion, int pagina,
+                                   int cantidadPorPagina, HttpStatus expectedStatus) throws Throwable {
+        return performRequest(
+                MockMvcRequestBuilders.get("/espiritu/demoniacos")
+                        .param("direccion", direccion.name())
+                        .param("pagina",   String.valueOf(pagina))
+                        .param("cantidadPorPagina", String.valueOf(cantidadPorPagina))
+        )
+                .andExpect(MockMvcResultMatchers.status().is(expectedStatus.value()))
+                .andReturn()
+                .getResponse()
+                .getStatus();
+    }
+
+    public void eliminar(Long espirituId) throws Throwable {
+        performRequest(MockMvcRequestBuilders.delete("/espiritu/" + espirituId))
+                .andExpect(MockMvcResultMatchers.status().isNoContent());
+    }
+
+    private String getContentAsString(String url) throws Throwable {
+        return performRequest(MockMvcRequestBuilders.get(url))
                 .andExpect(MockMvcResultMatchers.status().isOk())
                 .andReturn().getResponse().getContentAsString();
-        var dto = objectMapper.readValue(json,EspirituDTO.class);
-        return dto.aModelo();
     }
 
     public void conectarAMedium(Long espirituId, Long mediumId) throws Throwable{
         mockMvc.perform(MockMvcRequestBuilders.put("/espiritu/" + espirituId + "/conectar/" + mediumId))
                .andExpect(MockMvcResultMatchers.status().isOk());
     }
-
-    public Collection<Espiritu> getEspiritusDemoniacosPaginados(Direccion dir, int pag, int cantPags) throws Throwable{
-
-        var json = performRequest(
-                     MockMvcRequestBuilders
-                         .get("/espiritu/espiritusDemoniacos" + pag + "/" + cantPags + "/ " + dir.name()
-                     )
-                   )
-                .andExpect(MockMvcResultMatchers.status().isOk())
-                .andReturn().getResponse().getContentAsString();
-
-        Collection<EspirituDTO> dtos = objectMapper.readValue(json,
-                objectMapper.getTypeFactory().constructCollectionType(List.class,EspirituDTO.class)
-        );
-
-        return dtos.stream().map(EspirituDTO::aModelo).collect(Collectors.toList());
-
-    }
-
 }
